--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <button onclick="showPopup()">Click for a Surprise!</button>
         <div class="popup" id="popup">
             <!-- Update the image path here to match where your image is uploaded -->
-            <img src="https://github.com/allennncruz/try-lang/blob/main/pic%20namen.jpg?raw=true" alt="mwa">
+            <img src="try-lang/pic namen.jpg" alt="mwa">
             <p>labyuuu ❤</p>
             <button onclick="closePopup()">Close</button>
         </div>
