--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         <div class="heart">❤️</div>
         <button onclick="showPopup()">Click for a Surprise!</button>
         <div class="popup" id="popup">
-            <!-- Update the image path here to match where your image is uploaded -->
-            <img src="try-lang/pic namen.jpg" alt="mwa">
+           <img src="try-lang/pic.jpg" alt="mwa">
+           
             <p>labyuuu ❤</p>
             <button onclick="closePopup()">Close</button>
         </div>
