--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="heart">❤️</div>
         <button onclick="showPopup()">Click for a Surprise!</button>
         <div class="popup" id="popup">
-           <img src="try-lang/pic.jpg" alt="mwa">
+           <img src="https://raw.githubusercontent.com/allennncruz/try-lang/refs/heads/main/pic.jpg" alt="mwa">
            
             <p>labyuuu ❤</p>
             <button onclick="closePopup()">Close</button>
