--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <div class="final-modal-content">
             <div class="final-message">I Love You, Bebu! 💖💖</div>
             <button class="claim-button" onclick="claimGift()">Claim your gift my lab💖</button>
-            <img id="Tulip" src="tulip.jpg" alt="Tulip Bouquet" style="display:none; width:150px;">
+            <img src="tulip.jpg" alt="Tulip Bouquet" style="display:none; width:150px;">
             <button class="close-button" onclick="closeFinalModal()">Close</button>
         </div>
     </div>
