--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <div class="final-message">I Love You, Bebu! 💖💖</div>
             <button class="claim-button" onclick="claimGift()">Claim your gift my lab💖</button>
             <!-- Tulip Image for Claim Gift -->
-            <img id="tulip" src="https://via.placeholder.com/150" alt="Tulip Bouquet" style="display:none; width:150px;">
+            <img id="tulip" src="https://i.imgur.com/Y2xrnxK.jpeg" alt="Tulip Bouquet" style="display:none; width:150px;">
             <button class="close-button" onclick="closeFinalModal()">Close</button>
         </div>
     </div>
