--- a/index.html
+++ b/index.html
@@ -214,7 +214,6 @@
         <div class="final-modal-content">
             <div class="final-message">I Love You, Bebu! 💖💖</div>
             <button class="claim-button" onclick="claimGift()">Claim your gift my lab💖</button>
-            <!-- Tulip Image for Claim Gift -->
             <img id="tulip" src="https://i.imgur.com/Y2xrnxK.jpeg" alt="Tulip Bouquet" style="display:none; width:150px;">
             <button class="close-button" onclick="closeFinalModal()">Close</button>
         </div>
@@ -281,21 +280,45 @@
             drawMaze();
         }
 
-        function showModal(questionText, answers) {
-            document.getElementById("questionText").innerText = questionText;
-            const buttonsContainer = document.getElementById("answerButtons");
-            buttonsContainer.innerHTML = "";
-            answers.forEach(answer => {
-                const button = document.createElement("button");
-                button.innerText = answer.text;
-                button.onclick = answer.action;
-                buttonsContainer.appendChild(button);
+        function showModal(question, buttons) {
+            document.getElementById("questionText").innerText = question;
+            const answerButtons = document.getElementById("answerButtons");
+            answerButtons.innerHTML = ''; // Clear previous buttons
+            buttons.forEach(button => {
+                const btn = document.createElement('button');
+                btn.innerText = button.text;
+                btn.onclick = () => button.action(true);
+                answerButtons.appendChild(btn);
             });
             document.getElementById("questionModal").style.display = "block";
         }
 
-        function answerValentine() {
+        function closeModal() {
             document.getElementById("questionModal").style.display = "none";
+        }
+
+        function answerValentine(answer) {
+            closeModal();
+            showModal("And next year too? ", [
+                { text: "Yes", action: answerNextYear },
+                { text: "Yes", action: answerNextYear }
+            ]);
+        }
+
+        function answerNextYear(answer) {
+            closeModal();
+            showModal("reallyyyyyy?💖💖💖", [
+                { text: "Yes", action: loveForever },
+                { text: "Yes", action: loveForever }
+            ]);
+        }
+
+        function loveForever(answer) {
+            closeModal();
+            showFinalModal(); // Show final modal
+        }
+
+        function showFinalModal() {
             document.getElementById("finalModal").style.display = "block";
         }
 
