--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <div id="envelope-container" class="envelope-container" onclick="startGame()">
         <span class="envelope-text">Open 💌</span>
     </div>
-    <div id="message" class="message">Play the maze beb</div>
+    <div id="message" class="message">Play the maze my lab</div>
     <canvas id="maze" width="400" height="400"></canvas>
     <div class="controls">
         <div class="row">
@@ -307,7 +307,7 @@
 
         function answerNextYear(answer) {
             closeModal();
-            showModal("reallyyyyyy?💖💖💖", [
+            showModal("reallyyyyyy?", [
                 { text: "Yes", action: loveForever },
                 { text: "Yes", action: loveForever }
             ]);
