--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             height: 100vh;
             background-color: #ffe6f2;
             text-align: center;
-            font-family: 'Comic Sans MS', bold, sans-serif;
+            font-family: 'Comic Sans MS', italic, sans-serif;
             overflow: hidden;
             position: relative;
         }
